mybook/k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mybook-live-redis
spec:
  selector:
    app: mybook-live-redis
  ports:
    - protocol: TCP
      port: 6380
      #redis 默认端口
      targetPort: 6379
      nodePort:  30003
  type: NodePort
